Access control change

--- a/files/vscpd/vscpd.conf
+++ b/files/vscpd/vscpd.conf
@@ -198,7 +198,7 @@
         </driver>
         
         <!-- PEAK driver -->
-        <driver enable="true" >
+        <driver enable="false" >
             <name>peak</name>
             <config>CANUSB;125</config>
             <path>C:\Users\grodansparadis\development\vscp_software\src\vscp\drivers\level1\peak\win32\Debug\vscpl1_peakdrv.dll</path>
