--- a/files/vscpd/vscpd.conf
+++ b/files/vscpd/vscpd.conf
@@ -1,8 +1,8 @@
 <?xml version = "1.0" encoding = "UTF-8" ?>
 
-<!-- Version 1.0.0	   2014-11-07 		                                     -->
+<!-- 2015-04-12 20:37		                                                     -->
 <!-- Example configuration file 		                                     -->
-<!-- Ake Hedman, akhe@grodansparadis.com                                     -->
+<!-- info@grodansparadis.com                                     -->
 <!-- http://www.grodansparadis.com	                                         -->
 <!-- Documentation for this configuration file is available                  -->
 <!-- http://www.vscp.org/docs/vscpd/doku.php?id=configuring_the_vscp_daemon  -->
@@ -12,10 +12,9 @@
     <general>
     
         <!-- Set the detail of logging you want -->
-
         <loglevel>debug</loglevel>
         
-        <!-- The user to run as on Unix         -->
+        <!-- The user to run as on Unix                                     -->
         <runasuser></runasuser>
         
         <!-- General logging will be done to syslog on Unix but on          -->
@@ -149,16 +148,16 @@
         <!-- zone/subzone server use    -->
         <zone>1</zone>
         <sub-zone>2</sub-zone>
-        <!-- sunrise/sunset events data -->
-        <longitude>15.1604167</longitude>
-        <latitude>61.7441833</latitude>
-        <timezone>2</timezone>
+        <!-- sunrise/sunset events data (use comma or period as decimal separator according to your locale) -->
+        <longitude>15,1604167</longitude>
+        <latitude>61,7441833</latitude>
         <sunrise enable="true" />
         <sunrise-twilight enable="true" />
         <sunset enable="true" />
         <sunset-twilight enable="true" />
         <!-- Settings for 2014 (Sweden)                              -->
         <!-- Not needed on systems that is dayligt saving time aware -->
+		<timezone>1</timezone>
         <daylightsavingtime-start>2014-03-30 02:00:00</daylightsavingtime-start>
         <daylightsavingtime-end>2014-10-26 02:00:00</daylightsavingtime-end>
         <segmentcontoller-event enable="true" interval="60" />
@@ -215,7 +214,7 @@
         <!-- Level II Logger  -->
         <driver enable="false" >
             <name>VSCPLoggerDriver1</name>	
-            <path>C:\Users\grodansparadis\development\vscp_software\src\vscp\drivers\level2\logger\win32\Debug\vscpl2_loggerdrv.dll</path>
+            <path>/usr/local/lib/vscpl2drv_logger.dll</path>
             <config>C:\tmp/vscp_level2.log</config> 		
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>
@@ -223,7 +222,7 @@
         <!-- Level II lmsensors  -->
         <driver enable="false" >
             <name>lmsensors</name>
-            <path>/usr/local/lib/vscp2drv_lmsensors.so</path>
+            <path>/usr/local/lib/vscpl2drv_lmsensors.so</path>
             <config>2</config>
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>
@@ -231,7 +230,7 @@
         <!-- Level II mqtt  -->
         <driver enable="false" >
             <name>VSCPMQTTDriver1</name>
-            <path>/usr/local/lib/vscp2drv_mqtt.so</path>
+            <path>/usr/local/lib/vscpl2drv_mqtt.so</path>
             <config>subscribe;vscp;localhost;1883;;60</config>
             <guid>08:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>	
@@ -239,7 +238,7 @@
         <!-- Level II tcp/ip link  -->
         <driver enable="false" >                 
             <name>tcpiplink1</name>
-            <path>/usr/local/lib/vscp2drv_tcpiplink.so</path>
+            <path>/usr/local/lib/vscpl2drv_tcpiplink.so</path>
             <config>192.168.1.2;9598;admin;secret</config>                 
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>
@@ -248,7 +247,15 @@
         <driver enable="false"> 		   	 			
             <name>rawethernet1</name> 		   	 		
             <config>eth0</config>
-            <path>/usr/local/lib/vscp2drv_raweth.so</path>
+            <path>/usr/local/lib/vscpl2drv_raweth.so</path>
+        </driver>
+		
+		<!-- Level II simulation  -->
+        <driver enable="true"> 		   	 			
+            <name>sim1</name> 		   	 		
+            <config>1</config>
+			<guid>09:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
+            <path>C:\Program Files (x86)\VSCP\x86\level2\vscpl2_simdrv.dll</path>
         </driver>
  
 
