--- a/files/vscpworks/vscpworks.conf
+++ b/files/vscpworks/vscpworks.conf
@@ -1,13 +1,109 @@
 <?xml version = "1.0" encoding = "UTF-8" ?>
 <vscpworksconfig>
+
+<general>
+<width>600</width>
+<height>311</height>
+<xpos>1472</xpos>
+<ypos>343</ypos>
+<path2tempfile>C:\Users\GRODAN~1\AppData\Local\Temp</path2tempfile>
+<path2logfile enable="false" level="debug" >C:\Users\GRODAN~1\AppData\Local\Temp\vscpworks.log</path2logfile>
+<CANALReadMaxRetries>3</CANALReadMaxRetries>
+<CANALReadResendTimeout>1000</CANALReadResendTimeout>
+<CANALReadErrorTimeout>5000</CANALReadErrorTimeout>
+<TCPIPResponseTimeout>3</TCPIPResponseTimeout>
+<TCPIPReadMaxRetries>3</TCPIPReadMaxRetries>
+<TCPIPReadResendTimeout>2000</TCPIPReadResendTimeout>
+<TCPIPReadErrorTimeout>6000</TCPIPReadErrorTimeout>
+<NumberBase>Hex</NumberBase>
+<ConfirmDelete>true</ConfirmDelete>
+<GuidWriteEnable>do-not-use</GuidWriteEnable>
+<ManufacturerGuid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</ManufacturerGuid>
+<ManufacturerId>0x00000000</ManufacturerId>
+<ManufacturerSubId>0x00000000</ManufacturerSubId>
+</general>
+
+<mdfurl>
+</mdfurl>
+
+<vscpclient>
+<Autoscroll>true</Autoscroll>
+<VscpRcvPyjamasStyle>true</VscpRcvPyjamasStyle>
+<VscpUseSymbolicNames>true</VscpUseSymbolicNames>
+<VscpRcvRowLineHeight>20</VscpRcvRowLineHeight>
+<VscpRcvShowField0  enable="true" ></VscpRcvShowField0>
+<VscpRcvShowField1  enable="true" ></VscpRcvShowField1>
+<VscpRcvShowField2  enable="true" ></VscpRcvShowField2>
+<VscpRcvShowField3  enable="true" ></VscpRcvShowField3>
+<VscpRcvFieldOrder0>0</VscpRcvFieldOrder0>
+<VscpRcvFieldOrder1>1</VscpRcvFieldOrder1>
+<VscpRcvFieldOrder2>2</VscpRcvFieldOrder2>
+<VscpRcvFieldOrder3>3</VscpRcvFieldOrder3>
+<VscpRcvFieldText0>Dir</VscpRcvFieldText0>
+<VscpRcvFieldText1>Class</VscpRcvFieldText1>
+<VscpRcvFieldText2>Type</VscpRcvFieldText2>
+<VscpRcvFieldText3>Note</VscpRcvFieldText3>
+<VscpRcvFieldWidth0>30</VscpRcvFieldWidth0>
+<VscpRcvFieldWidth1>170</VscpRcvFieldWidth1>
+<VscpRcvFieldWidth2>170</VscpRcvFieldWidth2>
+<VscpRcvFieldWidth3>700</VscpRcvFieldWidth3>
+<VscpTrmitShowField0  enable="true" ></VscpTrmitShowField0>
+<VscpTrmitShowField1  enable="true" ></VscpTrmitShowField1>
+<VscpTrmitShowField2  enable="true" ></VscpTrmitShowField2>
+<VscpTrmitShowField3  enable="true" ></VscpTrmitShowField3>
+<VscpTrmitShowField4  enable="true" ></VscpTrmitShowField4>
+<VscpTrmitShowField5  enable="true" ></VscpTrmitShowField5>
+<VscpTrmitFieldOrder0>0</VscpTrmitFieldOrder0>
+<VscpTrmitFieldOrder1>1</VscpTrmitFieldOrder1>
+<VscpTrmitFieldOrder2>2</VscpTrmitFieldOrder2>
+<VscpTrmitFieldOrder3>3</VscpTrmitFieldOrder3>
+<VscpTrmitFieldOrder4>4</VscpTrmitFieldOrder4>
+<VscpTrmitFieldOrder5>5</VscpTrmitFieldOrder5>
+<VscpTrmitFieldText0>x</VscpTrmitFieldText0>
+<VscpTrmitFieldText1>Name</VscpTrmitFieldText1>
+<VscpTrmitFieldText2>Period</VscpTrmitFieldText2>
+<VscpTrmitFieldText3>Count</VscpTrmitFieldText3>
+<VscpTrmitFieldText4>Trigger</VscpTrmitFieldText4>
+<VscpTrmitFieldText5>Event</VscpTrmitFieldText5>
+<VscpTrmitFieldWidth0>30</VscpTrmitFieldWidth0>
+<VscpTrmitFieldWidth1>200</VscpTrmitFieldWidth1>
+<VscpTrmitFieldWidth2>60</VscpTrmitFieldWidth2>
+<VscpTrmitFieldWidth3>60</VscpTrmitFieldWidth3>
+<VscpTrmitFieldWidth4>120</VscpTrmitFieldWidth4>
+<VscpTrmitFieldWidth5>900</VscpTrmitFieldWidth5>
+<VscpRcvFrameRxTextColour  r="0" g="0" b="128" ></VscpRcvFrameRxTextColour>
+<VscpRcvFrameRxBgColour  r="255" g="255" b="255" ></VscpRcvFrameRxBgColour>
+<VscpRcvFrameTxTextColour  r="128" g="128" b="128" ></VscpRcvFrameTxTextColour>
+<VscpRcvFrameTxBgColour  r="255" g="255" b="255" ></VscpRcvFrameTxBgColour>
+<VscpRcvFrameLineColour  r="0" g="0" b="0" ></VscpRcvFrameLineColour>
+</vscpclient>
+
 <vscpinterface>
 <vscpdaemon>
 <description>Oxygen</description>
 <host>localhost</host>
-<port>9598</port>
 <username>admin</username>
 <password>secret</password>
+<interfacename></interfacename>
+<level2>true</level2>
 <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
+<filter  priority="0"  class="0"  type="0"  GUID="00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00"></filter>
+<mask  priority="0"  class="0"  type="0"  GUID="00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00"></mask>
 </vscpdaemon>
+
+<vscpdaemon>
+<description>local</description>
+<host>127.0.0.1:9598</host>
+<username>admin</username>
+<password>secret</password>
+<interfacename>sim1</interfacename>
+<level2>false</level2>
+<guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
+<filter  priority="0"  class="0"  type="0"  GUID="00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00"></filter>
+<mask  priority="0"  class="0"  type="0"  GUID="00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00"></mask>
+</vscpdaemon>
+
 </vscpinterface>
+
 </vscpworksconfig>
+
