--- a/files/vscpd/vscpd.conf
+++ b/files/vscpd/vscpd.conf
@@ -1,8 +1,8 @@
 <?xml version = "1.0" encoding = "UTF-8" ?>
 
-<!-- 2015-04-12 20:37		                                                     -->
+<!-- 2015-04-12 		                                                     -->
 <!-- Example configuration file 		                                     -->
-<!-- info@grodansparadis.com                                     -->
+<!-- Ake Hedman, akhe@grodansparadis.com                                     -->
 <!-- http://www.grodansparadis.com	                                         -->
 <!-- Documentation for this configuration file is available                  -->
 <!-- http://www.vscp.org/docs/vscpd/doku.php?id=configuring_the_vscp_daemon  -->
@@ -254,7 +254,7 @@
         <driver enable="true"> 		   	 			
             <name>sim1</name> 		   	 		
             <config>1</config>
-			<guid>09:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
+			<guid>FF:FF:FF:FF:FF:FF:FF:F7:03:00:00:00:00:00:00:00</guid>
             <path>C:\Program Files (x86)\VSCP\x86\level2\vscpl2_simdrv.dll</path>
         </driver>
  
