--- a/files/vscpd/vscpd.conf
+++ b/files/vscpd/vscpd.conf
@@ -132,13 +132,15 @@
             <name>admin</name>
             <password>d50c3180375c27927c22e42a379c3f67</password>
             <privilege>admin</privilege>
-            <allowfrom>127.0.0.1,192.168.1.*</allowfrom>
+			<!-- A stricter allowfrom can be 127.0.0.1,192.168.1.* -->
+            <allowfrom>*</allowfrom>
         </user>	
         <user>
             <name>user</name>
             <password>ee11cbb19052e40b07aac0ca060c23ee</password>
             <privilege>admin</privilege>
-            <allowfrom>127.0.0.1,192.168.1.*</allowfrom>
+			<!-- A stricter allowfrom can be 127.0.0.1,192.168.1.* -->
+            <allowfrom>*</allowfrom>
         </user>	
     </remoteuser>
 
@@ -250,12 +252,12 @@
             <path>/usr/local/lib/vscpl2drv_raweth.so</path>
         </driver>
 		
-		<!-- Level II simulation  -->
+	<!-- Level II simulation  -->
         <driver enable="true"> 		   	 			
             <name>sim1</name> 		   	 		
             <config>1</config>
 			<guid>FF:FF:FF:FF:FF:FF:FF:F7:03:00:00:00:00:00:00:00</guid>
-            <path>C:\Program Files (x86)\VSCP\x86\level2\vscpl2_simdrv.dll</path>
+            <path>C:\Program Files (x86)\VSCP\drivers\level2\vscpl2_simdrv.dll</path>
         </driver>
  
 
