Added expat lib files

--- a/files/vscpd/vscpd32.conf
+++ b/files/vscpd/vscpd32.conf
@@ -22,18 +22,18 @@
         <!-- file. The debug level will determine how much information      -->
         <!-- you will get into this file.                                   -->
         
-        <generallogfile enable="true">c:/programdata/vscp/logs/vscp_log_general.txt</generallogfile>
+        <generallogfile enable="true">c:\programdata\vscp\logs\vscp_log_general.txt</generallogfile>
         
         <!-- Security logging will be done to this path must be set to      -->
         <!-- get security logging saved into a file.                        -->
         
-        <securitylogfile enable="true">c:/programdata/vscp/logs/vscp_log_security.txt</securitylogfile>
+        <securitylogfile enable="true">c:\programdata\vscp\logs\vscp_log_security.txt</securitylogfile>
         
         <!-- Access logging will be done to this path must be set to        -->
         <!-- get access logging for tcp/ip udp webserver websocket and rest -->
         <!-- saved into a file.                                             -->
         
-        <accesslogfile enable="true">c:/programdata/vscp/logs/vscp_log_access.txt</accesslogfile>
+        <accesslogfile enable="true">c:\programdata\vscp\logs\vscp_log_access.txt</accesslogfile>
 
         <!-- It is possible to enable/disable the TCP/IP interface        -->
         <!-- You can open TCP/IP interfaces on several ports or on        -->
@@ -69,17 +69,17 @@
         <!-- logpath is path to logfile.                                   -->
         
         <dm enable="true" 
-                path="c:/programdata/vscp/dm.xml" 
+                path="c:\programdata\vscp\dm.xml" 
                 enablelogging="true" 
                 loglevel="debug" 
-                logpath="c:/programdata/vscp/logs/vscp_log_dm.txt"  />      
+                logpath="c:\programdata\vscp\logs\vscp_log_dm.txt"  />      
 
         <!-- Set to true to enable daemon variables         -->
         <!-- Set to false to disable.                       -->
         <!-- Path to variables storage.                     -->
 
 
-        <variables enable="true" path="c:/programdata/vscp/variables.xml" autosave="5" />
+        <variables enable="true" path="c:\programdata\vscp\variables.xml" autosave="5" />
 
         <!-- Set GUID for daemon                               -->
         <!-- Read more about GUID's in Specification section 4 -->
@@ -160,8 +160,6 @@
         <!-- Settings for 2014 (Sweden)                              -->
         <!-- Not needed on systems that is dayligt saving time aware -->
 		<timezone>1</timezone>
-        <daylightsavingtime-start>2014-03-30 02:00:00</daylightsavingtime-start>
-        <daylightsavingtime-end>2014-10-26 02:00:00</daylightsavingtime-end>
         <segmentcontoller-event enable="true" interval="60" />
         <heartbeat-event enable="true" interval="60" />
     </automation>
@@ -175,7 +173,7 @@
         <driver enable="false">
             <name>logger</name>
             <config>/tmp/canallog.txt</config>
-            <path>C:\Users\grodansparadis\development\vscp_software\src\vscp\drivers\level1\logger\win32\Release/canallogger.dll</path>
+            <path>C:\Program Files\VSCP\drivers\x86\canallogger.dll</path>
             <flags>1</flags>
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>
@@ -184,7 +182,7 @@
         <driver enable="false" >
             <name>can232</name>
             <config>/dev/ttyS0;19200;0;0;125</config>
-            <path>/usr/local/lib/can232drv.so</path>
+            <path>C:\Program Files\VSCP\drivers\x86\can232drv.so</path>
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
             <flags>0</flags>
         </driver>
@@ -193,7 +191,7 @@
         <driver enable="false" >
             <name>xap</name>
             <config>9598;3639</config>
-            <path>/usr/local/lib/xapdrv.so</path>
+            <path>C:\Program Files\VSCP\drivers\x86\xapdrv.so</path>
             <flags>0</flags>
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>
@@ -202,7 +200,7 @@
         <driver enable="false" >
             <name>peak</name>
             <config>CANUSB;125</config>
-            <path>C:\Users\grodansparadis\development\vscp_software\src\vscp\drivers\level1\peak\win32\Debug\vscpl1_peakdrv.dll</path>
+            <path>C:\Program Files\VSCP\drivers\x86\vscpl1_peakdrv.dll</path>
             <flags>1</flags>
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>
@@ -216,23 +214,15 @@
         <!-- Level II Logger  -->
         <driver enable="false" >
             <name>VSCPLoggerDriver1</name>	
-            <path>/usr/local/lib/vscpl2drv_logger.dll</path>
-            <config>C:\tmp/vscp_level2.log</config> 		
+            <path>C:\Program Files (x86)\VSCP\drivers\x86\vscpl1_loggerdrv.dll</path>
+            <config>C:\tmp\vscp_level2.log</config> 		
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>
  	
-        <!-- Level II lmsensors  -->
-        <driver enable="false" >
-            <name>lmsensors</name>
-            <path>/usr/local/lib/vscpl2drv_lmsensors.so</path>
-            <config>2</config>
-            <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
-        </driver>
-
         <!-- Level II mqtt  -->
         <driver enable="false" >
             <name>VSCPMQTTDriver1</name>
-            <path>/usr/local/lib/vscpl2drv_mqtt.so</path>
+            <path>C:\Program Files (x86)\VSCP\drivers\x86\vscpl2drv_mqtt.dll</path>
             <config>subscribe;vscp;localhost;1883;;60</config>
             <guid>08:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>	
@@ -240,7 +230,7 @@
         <!-- Level II tcp/ip link  -->
         <driver enable="false" >                 
             <name>tcpiplink1</name>
-            <path>/usr/local/lib/vscpl2drv_tcpiplink.so</path>
+            <path>C:\Program Files (x86)\VSCP\drivers\x86\vscpl2_tcpiplinkdrv.dll</path>
             <config>192.168.1.2;9598;admin;secret</config>                 
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>
@@ -249,15 +239,15 @@
         <driver enable="false"> 		   	 			
             <name>rawethernet1</name> 		   	 		
             <config>eth0</config>
-            <path>/usr/local/lib/vscpl2drv_raweth.so</path>
+            <path>C:\Program Files (x86)\VSCP\drivers\x86\vscpl2_rawethernetdrv.dll</path>
         </driver>
 		
-	<!-- Level II simulation  -->
+		<!-- Level II simulation  -->
         <driver enable="true"> 		   	 			
             <name>sim1</name> 		   	 		
             <config>1</config>
 			<guid>FF:FF:FF:FF:FF:FF:FF:F7:03:00:00:00:00:00:00:00</guid>
-            <path>C:\Program Files (x86)\VSCP\drivers\level2\vscpl2_simdrv.dll</path>
+            <path>C:\Program Files (x86)\VSCP\drivers\x86\vscpl2_simdrv.dll</path>
         </driver>
  
 
