--- a/files/vscpd/vscpd64.conf
+++ b/files/vscpd/vscpd64.conf
@@ -172,7 +172,7 @@
         <!-- The canallog driver  -->
         <driver enable="false">
             <name>logger</name>
-            <config>/tmp/canallog.txt</config>
+            <config>C:\programdata\vscp\canallog.txt</config>
             <path>C:\Program Files\VSCP\drivers\x64\vscpl1_loggerdrv.dll</path>
             <flags>1</flags>
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
@@ -206,7 +206,7 @@
         <driver enable="false" >
             <name>VSCPLoggerDriver1</name>	
             <path>C:\Program Files\VSCP\drivers\x64\vscpl2drv_logger.dll</path>
-            <config>C:\tmp/vscp_level2.log</config> 		
+            <config>C:\programdata\vscp\vscp_level2.log</config> 		
             <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
         </driver>
 
@@ -238,7 +238,7 @@
     <!-- Collect data in tables -->
     <tables>
     
-        <table path="c:/programdata/vscp/tables/temperature_outside.table" 
+        <table path="c:\programdata\vscp\tables\temperature_outside.table" 
                   type="dynamic"
                   name="outsidetemp"
                   description="The temperature in the greens"
@@ -250,7 +250,7 @@
                   vscpunit="1"
         />
         
-        <table path="c:/programdata/vscp/tables/temperature_office.table" 
+        <table path="c:\programdata\vscp\tables\temperature_office.table" 
                   type="dynamic"
                   name="officetemp"
                   description="The temperature in the office"
@@ -262,7 +262,7 @@
                   vscpunit="1"
         />
         
-        <table path="c:/programdata/vscp/tables/temperature_south.table" 
+        <table path="c:\programdata\vscp\tables\temperature_south.table" 
                   type="static"
                   name="southtemp"
                   description="The temperature in the office"
