--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 /vscp-1.0.1.3-x86.exe
 /vscp-1.0.1.3-x86.exe.zip
 /vscp-1.1.0-x86.exe
+/vscp-1.1.0-x64-rc1.exe
+/vscp-1.1.0-x64-rc1.exe.zip
+/vscp-1.1.0-x64-rc2.exe
+/vscp-1.1.0-x64-rc2.exe.zip
+/vscp-1.1.0-x64-rc3.exe
+/vscp-1.1.0-x64-rc3.exe.zip
+/vscp-1.1.0-x86-rc1.exe
+/vscp-1.1.0-x86-rc1.exe.zip
+/vscp-1.1.0-x86-rc2.exe
+/vscp-1.1.0-x86-rc2.exe.zip
+/vscp-1.1.0-x86-rc3.exe
+/vscp-1.1.0-x86-rc3.exe.zip
