--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,13 @@
 /vscp-1.1.0-x86-rc2.exe.zip
 /vscp-1.1.0-x86-rc3.exe
 /vscp-1.1.0-x86-rc3.exe.zip
+/vscp-1.1.0.3-x64.exe
+/vscp-1.1.0.3-x64.exe.zip
+/vscp-1.1.0.3-x86.exe
+/vscp-1.1.0.3-x86.exe.zip
+/vscp-1.1.0.5-x64.exe
+/vscp-1.1.0.5-x64.exe.zip
+/vscp-1.1.0.5-x86.exe
+/vscp-1.1.0.5-x86.exe.zip
+/vscp-1.12.22-x64.exe
+/vscp-1.12.22-x86.exe
