--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@
 /vscp-1.12.22-x64.exe
 /vscp-1.12.22-x86.exe
 /vscp-1.12.0-x64.exe
+/vscp-1.12.0-x64.exe.zip
+/vscp-1.12.0-x86.exe
+/vscp-1.12.0-x86.exe.zip
